Kubernetes_yaml_files/backend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: hospital-system
  labels:
    app: backend
    tier: application
    runtime: python-flask
    database: azure-mysql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: backend
        tier: application
    spec:
      containers:
        - name: backend
          image: saimanoj0113/hospital-backend:latest  
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: hospital-system
  labels:
    app: backend
    tier: application
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
